--- a/redsheet-portal/src/app/components/dashboard/message-users/message-users/message-users.component.html
+++ b/redsheet-portal/src/app/components/dashboard/message-users/message-users/message-users.component.html
@@ -8,7 +8,7 @@
             <p class="text-muted">Select Users(s) to message</p>
           </div>
           <div class="modal-body">
-            <ul class="m-0 p-0" type="none">
+            <ul class="m-0 p-0" type="none" *ngIf="users?.length>0">
               <li class="my-1" *ngFor="let user of users; index as i" type="none">
                 <label *ngIf="user.userId!=data.userId" class="custom-control custom-checkbox">
                   <input class="custom-control-input checkbox-icon" type="checkbox" (change)="AddRemoveRecipents($event,user.email)">
@@ -19,6 +19,7 @@
               </label>
               </li>
             </ul>
+            <h5 *ngIf="displayMessage.length>0" class="text-muted">{{displayMessage}}</h5>
             <p class="mt-3 mb-0 text-muted">Message</p>
             <textarea  class="form-control" placeholder="Type message here.." [(ngModel)]="message"></textarea>
             <div class="m-0 py-3 p-0">
